chore: introduce auto generated mocks
